--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@mantine/core": "^7.1.2",
+    "@mantine/form": "^7.1.2",
     "@mantine/hooks": "^7.1.2",
+    "@tabler/icons-react": "^2.38.0",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
