--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-auth": "^4.23.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-google-button": "^0.7.2",
     "react-timer-hook": "^3.0.7"
   },
   "devDependencies": {
