--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,12 @@ GOOGLE_CLIENT_SECRET=""
 # Auth-Config
 NEXTAUTH_SECRET=""
 NEXTAUTH_URL=""
+
+# db
+POSTGRES_URL=""
+POSTGRES_PRISMA_URL=""
+POSTGRES_URL_NON_POOLING=""
+POSTGRES_USER=""
+POSTGRES_HOST=""
+POSTGRES_PASSWORD=""
+POSTGRES_DATABASE=""
