--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^7.1.2",
     "@mantine/form": "^7.1.2",
     "@mantine/hooks": "^7.1.2",
+    "@prisma/client": "5.4.1",
     "@tabler/icons-react": "^2.38.0",
     "next": "latest",
     "next-auth": "^4.23.2",
@@ -28,6 +29,7 @@
     "postcss": "^8.4.31",
     "postcss-preset-mantine": "^1.8.0",
     "postcss-simple-vars": "^7.0.1",
+    "prisma": "^5.4.1",
     "typescript": "latest"
   }
 }
