--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,5 @@ NEXTAUTH_SECRET=""
 NEXTAUTH_URL=""
 
 # db
-POSTGRES_URL=""
-POSTGRES_PRISMA_URL=""
-POSTGRES_URL_NON_POOLING=""
-POSTGRES_USER=""
-POSTGRES_HOST=""
-POSTGRES_PASSWORD=""
-POSTGRES_DATABASE=""
+DATABASE_URL="" #POOLING
+DIRECT_URL="" #DIRECT
